--- a/package.json
+++ b/package.json
@@ -1,44 +1,29 @@
 {
-  "name": "tiktok-scraper-ts",
-  "version": "1.4.2",
-  "description": "A scraper for tiktok videos, users and more",
+  "name": "tiktok-scraper",
+  "version": "1.0.14",
+  "description": "Scraper API for Vercel",
   "main": "dist/main.js",
+  "typings": "dist/main.d.ts",
   "scripts": {
-    "start": "tsc && node dist/main.js",
-    "build:docs": "npx typedoc src/main.ts",
-    "build:lib": "npx tsup"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/naseif/tiktok-scraper.git"
-  },
-  "author": "naseif",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/naseif/tiktok-scraper/issues"
-  },
-  "keywords": [
-    "tiktok-videos-downloader",
-    "tiktok-video-downloader",
-    "tiktok-scraper",
-    "tiktok-downloader",
-    "tiktok-api",
-    "tiktok-videos-scraper"
-  ],
-  "homepage": "https://github.com/naseif/tiktok-scraper#readme",
-  "devDependencies": {
-    "@types/node": "^17.0.45",
-    "@types/node-fetch": "^2.6.11",
-    "tsup": "^5.12.9",
-    "typedoc": "^0.22.18",
-    "typescript": "^4.9.5"
+    "build": "tsup",
+    "start": "node dist/main.js"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
-    "miniget": "^4.2.2",
-    "netscape-cookies-parser": "^1.0.2",
-    "node-fetch": "^2.6.7",
+    "axios": "^0.27.2",
+    "axios-cookiejar-support": "^4.0.3",
+    "cheerio": "^1.0.0-rc.11",
     "puppeteer": "^22.11.2",
-    "tiktok-signature": "^1.7.3"
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "tough-cookie": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.33",
+    "@types/tough-cookie": "^4.0.2",
+    "tsup": "^6.0.1",
+    "typescript": "^4.9.5"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
