--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiktok-scraper",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "Scraper API for Vercel",
   "main": "dist/main.js",
   "typings": "dist/main.d.ts",
@@ -9,19 +9,23 @@
     "start": "node dist/main.js"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.6.0",
     "axios-cookiejar-support": "^4.0.3",
-    "cheerio": "^1.0.0-rc.11",
+    "cheerio": "^1.0.0-rc.12",
+    "miniget": "^4.2.3",
+    "netscape-cookies-parser": "^0.0.3",
+    "node-fetch": "^2.7.0",
     "puppeteer": "^22.11.2",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "tough-cookie": "^4.0.0"
+    "tough-cookie": "^4.1.3"
   },
   "devDependencies": {
-    "@types/node": "^17.0.33",
-    "@types/tough-cookie": "^4.0.2",
-    "tsup": "^6.0.1",
-    "typescript": "^4.9.5"
+    "@types/node": "^20.0.0",
+    "@types/node-fetch": "^2.6.9",
+    "@types/tough-cookie": "^4.0.5",
+    "tsup": "^6.7.0",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": "20.x"
