--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiktok-scraper",
-  "version": "1.0.15",
+  "version": "1.0.17",
   "description": "Scraper API for Vercel",
   "main": "dist/main.js",
   "typings": "dist/main.d.ts",
@@ -13,7 +13,7 @@
     "axios-cookiejar-support": "^4.0.3",
     "cheerio": "^1.0.0-rc.12",
     "miniget": "^4.2.3",
-    "netscape-cookies-parser": "^0.0.1",
+    "netscape-cookies-parser": "*",
     "node-fetch": "^2.7.0",
     "puppeteer": "^22.11.2",
     "puppeteer-extra": "^3.3.6",
@@ -21,7 +21,7 @@
     "tough-cookie": "^4.1.3"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/node": "^18.0.0",
     "@types/node-fetch": "^2.6.9",
     "@types/tough-cookie": "^4.0.5",
     "tsup": "^6.7.0",
